<resources>
    <string name="app_name">DustStrikeForce</string>
    <!-- Settings -->
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_about_first_text">Version\n</string>
    <string name="settings_about_second_text">1.0.0</string>
    <string name="settings_second_part_title">About</string>
    <string name="settings_logout">Logout</string>
    <!--Menu-->
    <string name="nav_menu_sredstva">Cleaning agents</string>
    <string name="nav_menu_nastavitve">Settings</string>
    <string name="nav_menu_opravila">Chores</string>
    <string name="app_logo">app_logo</string>
    <!--Startup-->
    <string name="front_name">DSF</string>
    <string name="start_page_title">Welcome to Dust Strike Force</string>
    <string name="start_page_subText">Login to get started</string>
    <string name="start_page_btn_login">LOGIN</string>
    <string name="start_page_btn_register">REGISTER</string>
    <string name="login_greetings">Welcome Back</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_pwd">Password</string>
    <string name="login_forgot_pwd">Forgot password?</string>
    <string name="login_btn_sign_in">SIGN IN</string>
    <string name="login_new_account">Don\'t have an account?</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_hint_username">Username</string>
    <string name="register_title">Create an account</string>
    <string name="register_btn">REGISTER</string>
    <string name="register_login">Login</string>
    <string name="register_text_login">I already have an account!</string>
    <string name="startup_image_description">Bucket full of cleaning agents</string>
    <string name="cleaning_agents">Cleaning agents</string>
    <string name="add">Add</string>
    <string name="show">Show</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>